tests/testthat/invalid_sgf/metadata_with_square_brackets.sgf
(;FF[4]GM[1]SZ[19]PB[Bret];B[aa]C[bret [15k]: hello];W[bb];B[cc];W[dd];B[ad];W[bd])